<resources>
    <string name="app_name">QuickBudget</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="main_fragment">Main Fragment</string>
    <string name="setup_fragment">Setup Fragment</string>

    <!-- Setup Text -->
    <string name="account_balance">Account Balance</string>

    <!-- Setup Income -->
    <string name="setup_income_income">Income</string>
    <string name="setup_income_every">every</string>
    <string name="setup_income_number_of">number of</string>
    <string name="setup_income_default_period">1</string>
    <string-array name="setup_income_periods">
        <item>day(s)</item>
        <item>week(s)</item>
        <item>month(s)</item>
        <item>year(s)</item>
    </string-array>

    <!-- Setup Next Pay -->
    <string name="setup_next_pay">Date of Next Payday</string>

    <!-- Generic -->
    <string name="save">Save</string>
    <string name="next">Next</string>
    <string name="proceed">Proceed</string>
    <string name="back">Back</string>
    <string name="date_format">%1$d/%2$d/%3$d</string>

    <!-- Content Description -->
    <string name="content_desc_img_account">Account Image</string>
    <string name="content_desc_img_income">Income</string>
</resources>
