<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:focusable="true" android:focusableInTouchMode="true">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <Button
                android:text="@string/back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:id="@+id/bBack"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:textSize="18sp"
                style="@style/Widget.MaterialComponents.Button.OutlinedButton"
                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toBottomOf="@+id/etPeriod"
                android:layout_marginBottom="16dp" android:layout_marginTop="24dp"/>
        <Button
                android:text="@string/proceed"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:id="@+id/bNext"
                android:textSize="18sp"
                app:layout_constraintStart_toEndOf="@+id/bBack" android:layout_marginStart="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintTop_toTopOf="@+id/bBack" app:layout_constraintBottom_toBottomOf="@+id/bBack"/>
        <ImageView
                android:layout_width="200dp"
                android:layout_height="200dp" app:srcCompat="@drawable/ic_account_salary"
                android:id="@+id/imageView2"
                android:tint="@color/colorSecondary" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/tvIncome"
                app:layout_constraintVertical_chainStyle="packed" android:layout_marginTop="16dp"
                app:layout_constraintVertical_bias="0.0" android:contentDescription="@string/content_desc_img_income"/>
        <TextView
                android:id="@+id/tvIncome"
                android:text="@string/setup_income_income"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorTextOnLightHigh" android:textSize="24sp"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/imageView2"
                app:layout_constraintBottom_toTopOf="@+id/etIncome" android:layout_marginTop="4dp"/>
        <TextView
                android:id="@+id/tvEvery"
                android:text="@string/setup_income_every"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:textColor="@color/colorTextOnLightMedium" android:textSize="24sp"
                android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@+id/etPeriod" app:layout_constraintBottom_toBottomOf="@+id/etPeriod"
                android:gravity="center_vertical"/>
        <com.blackcat.currencyedittext.CurrencyEditText
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondary"
                android:textColorHint="@color/colorHintOnLight"
                android:textColor="@color/colorTextOnLightHigh"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/etIncome"
                android:textSize="24sp" android:layout_marginStart="16dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintEnd_toEndOf="parent" android:textAlignment="center"
                app:layout_constraintHorizontal_bias="0.5"
                app:layout_constraintTop_toBottomOf="@+id/tvIncome"
                app:layout_constraintBottom_toTopOf="@+id/etPeriod" android:layout_marginTop="24dp"/>
        <EditText
                android:id="@+id/etPeriod"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/colorSecondary"
                android:textColorHint="@color/colorHintOnLight"
                android:textColor="@color/colorTextOnLightHigh"
                android:inputType="numberSigned"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:ems="10"
                android:hint="@string/setup_income_number_of"
                android:textAlignment="center"
                android:textSize="24sp"
                app:layout_constraintStart_toEndOf="@+id/tvEvery"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="8dp" app:layout_constraintEnd_toStartOf="@+id/spinnerPeriod"
                app:layout_constraintTop_toBottomOf="@+id/etIncome"
                app:layout_constraintHorizontal_bias="0.5" app:layout_constraintBottom_toTopOf="@+id/bBack"
                android:layout_marginTop="8dp" android:text="@string/setup_income_default_period"/>
        <Spinner
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:backgroundTint="@color/colorTextOnLightHigh"
                android:id="@+id/spinnerPeriod" android:entries="@array/setup_income_periods"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintBottom_toBottomOf="@+id/etPeriod"
                app:layout_constraintTop_toTopOf="@+id/etPeriod"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>